// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load valid references 1`] = `
Object {
  "dependencies": Array [],
  "dir": ".",
  "metadata": Object {
    "__temp_defaults": Array [
      "publish",
    ],
    "authors": Array [
      "Tim Hall",
    ],
    "publish": false,
  },
  "name": "package-name",
  "references": Array [
    Object {
      "guid": "{420B2830-E718-11CF-893D-00A0C9054228}",
      "major": 1,
      "minor": 0,
      "name": "a",
      "optional": true,
      "version": "1.0",
    },
  ],
  "src": Array [],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads and parses manifest 1`] = `
Object {
  "dependencies": Array [
    Object {
      "name": "json",
      "registry": "vba-blocks",
      "version": "^2",
    },
  ],
  "dir": ".",
  "metadata": Object {
    "__temp_defaults": Array [
      "publish",
    ],
    "authors": Array [
      "Tim Hall",
    ],
    "publish": false,
  },
  "name": "standard",
  "references": Array [
    Object {
      "guid": "{0002E157-0000-0000-C000-000000000046}",
      "major": 5,
      "minor": 3,
      "name": "VBIDE",
      "optional": false,
      "version": "5.3",
    },
  ],
  "src": Array [
    Object {
      "name": "ThisWorkbook",
      "optional": false,
      "path": "src/ThisWorkbook.cls",
    },
    Object {
      "name": "Sheet1",
      "optional": false,
      "path": "src/Sheet1.cls",
    },
    Object {
      "name": "Sheet2",
      "optional": false,
      "path": "src/Sheet2.cls",
    },
    Object {
      "name": "Sheet3",
      "optional": false,
      "path": "src/Sheet3.cls",
    },
    Object {
      "name": "Validation",
      "optional": false,
      "path": "src/Validation.bas",
    },
    Object {
      "name": "Class1",
      "optional": false,
      "path": "src/Class1.cls",
    },
  ],
  "target": Object {
    "filename": "standard.xlsm",
    "name": "standard",
    "path": "targets/xlsm",
    "type": "xlsm",
  },
  "type": "project",
  "version": "0.0.0",
}
`;

exports[`loads valid dependencies 1`] = `
Object {
  "dependencies": Array [
    Object {
      "name": "a",
      "registry": "vba-blocks",
      "version": "^1.0.0",
    },
    Object {
      "name": "b",
      "registry": "vba-blocks",
      "version": "^2.0.0",
    },
    Object {
      "name": "c",
      "path": "packages/c",
    },
    Object {
      "branch": "master",
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "d",
    },
    Object {
      "branch": "next",
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "e",
    },
    Object {
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "f",
      "tag": "v1.0.0",
    },
    Object {
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "g",
      "rev": "a1b2c3d4",
    },
  ],
  "dir": ".",
  "metadata": Object {
    "__temp_defaults": Array [
      "publish",
    ],
    "authors": Array [
      "Tim Hall",
    ],
    "publish": false,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid package metadata 1`] = `
Object {
  "dependencies": Array [],
  "dir": ".",
  "metadata": Object {
    "__temp_defaults": Array [
      "publish",
    ],
    "authors": Array [
      "Tim Hall",
    ],
    "publish": false,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid sources 1`] = `
Object {
  "dependencies": Array [],
  "dir": ".",
  "metadata": Object {
    "__temp_defaults": Array [
      "publish",
    ],
    "authors": Array [
      "Tim Hall",
    ],
    "publish": false,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [
    Object {
      "name": "A",
      "optional": false,
      "path": "src/a.bas",
    },
    Object {
      "name": "B",
      "optional": false,
      "path": "src/b.cls",
    },
    Object {
      "name": "C",
      "optional": true,
      "path": "src/c.frm",
    },
  ],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid target 1`] = `
Object {
  "dependencies": Array [],
  "dir": ".",
  "metadata": Object {
    "__temp_defaults": Array [
      "publish",
    ],
    "authors": Array [
      "Tim Hall",
    ],
    "publish": false,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": Object {
    "filename": "package-name.xlsm",
    "name": "package-name",
    "path": "target",
    "type": "xlsm",
  },
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid target 2`] = `
Object {
  "dependencies": Array [],
  "dir": ".",
  "metadata": Object {
    "__temp_defaults": Array [
      "publish",
    ],
    "authors": Array [
      "Tim Hall",
    ],
    "publish": false,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": Object {
    "filename": "addin.xlam",
    "name": "addin",
    "path": "targets/xlam",
    "type": "xlam",
  },
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`throws for invalid syntax 1`] = `
"vba-blocks.toml is invalid:

Syntax Error: fixtures/projects/invalid-manifest/vba-block.toml (2:5)

Expected \\"=\\", [ \\\\t] or [A-Za-z0-9_\\\\-] but \\":\\" found."
`;
